--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Dungeon Game</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <h1>
-                Dungeon Game
-            </h1>
-        </header>
-        <h2>Its like 11:50 am im gonna like actually do shit with this tomorrow</h2>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Dungeon Game</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="game.js"></script>
+</head>
+
+<body onload="grid()">
+    <header>
+        <h1>
+            Dungeon Game
+        </h1>
+    </header>
+
+    <div class="container-container">
+        <div id="grid-container">
+        </div>
+    </div>
+</body>
+
 </html>
