work on movement, added more assets

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+    <!--Essential stuff-->
     <meta charset="utf-8">
     <title>Dungeon Game</title>
     <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
+
+    <!--Game stuff-->
+    <meta position="28" id="pos">
 </head>
 
 <body onload="grid()">
