--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
     <!--Game stuff-->
     <meta position="28" id="pos">
+
+    <!--Meta tags-->
+    <meta property="og:title" content="Dungeon Game">
+    <meta property="og:site_name" content="Dungeon Game">
+    <meta property="og:description" content="A web based dungeon crawler">
+    <meta property="og:type" content="game">
+    <meta property="og:image" content="assets/player.png">
+    <meta property="og:url" content="https://horsescary.com/dungeon-game/">
+    <meta property="twitter:image" content="assets/player.png">
 </head>
 
 <body onload="grid()">
