added a meta tag for the player inventory

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="game.js"></script>
 
     <!--Game stuff-->
-    <meta position="28" id="pos">
+    <meta position="27" id="pos">
+    <meta id="inventory">
 
     <!--Meta tags-->
     <meta property="og:title" content="Dungeon Game">
