trying to make the thing better

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <!--Game stuff-->
     <meta position="27" id="pos">
-    <meta id="inventory">
+    <meta hp="100" id="hp">
+    <meta def="10" id="def">
+    <meta attack="5" id="attack">
 
     <!--Meta tags-->
     <meta property="og:title" content="Dungeon Game">
@@ -29,9 +31,17 @@
         </h1>
     </header>
 
-    <div class="container-container">
-        <div id="grid-container">
+    <div class="grid-container">
+
+        <div id="info">
+            penis
         </div>
+
+        <div class="container">
+            <div id="game-container">
+            </div>
+        </div>
+        
     </div>
 </body>
 
