added info to info section, probably fixed twitter image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="game.js"></script>
 
-    <!--Game stuff-->
+    <!--Game info-->
     <meta position="27" id="pos">
     <meta hp="100" id="hp">
     <meta def="10" id="def">
@@ -21,7 +21,7 @@
     <meta property="og:type" content="game">
     <meta property="og:image" content="assets/player.png">
     <meta property="og:url" content="https://horsescary.com/dungeon-game/">
-    <meta property="twitter:image" content="assets/player.png">
+    <meta property="twitter:image" content="https://horsescary.com/dungeon-game/assets/player.png">
 </head>
 
 <body onload="grid()">
@@ -34,7 +34,12 @@
     <div class="grid-container">
 
         <div id="info">
-            penis
+           <h2>
+               Game Info
+           </h2> 
+           
+           <div id="info-container">
+           </div>
         </div>
 
         <div class="container">
