added meta tag to store level

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta hp="100" id="hp">
     <meta def="10" id="def">
     <meta attack="5" id="attack">
+    <meta level="0" id="level">
 
     <!--Meta tags-->
     <meta property="og:title" content="Dungeon Game">
