Working on makign the code cleener

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title>Dungeon Game</title>
     <link rel="stylesheet" href="style.css">
-    <script src="game.js"></script>
+    <script src="game2.js"></script>
 
     <!--Game info-->
     <meta hp="100" id="hp">
@@ -24,11 +24,12 @@
     <meta property="twitter:image" content="https://horsescary.com/dungeon-game/assets/player.png">
 </head>
 
-<body onload="grid()">
+<body onload="gameStart()">
     <header>
         <h1>
             Dungeon Game
         </h1>
+        <h2 style="color:red;">Currently reworking game</h2>
     </header>
 
     <div class="grid-container">
