work on chest loot system

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="game2.js"></script>
 
     <!--Game info-->
-    <meta hp="100" id="hp">
+    <meta hp="100" maxhp="100" id="hp">
     <meta def="10" id="def">
     <meta attack="5" id="attack">
     <meta level="0" id="level">
