made chest work

--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
            <h2>
                Game Info
            </h2> 
-           
+    
            <div id="info-container">
+               <img src="assets/chestplate.png" alt="a chestplate">
+               <div id="definfo"></div>
+               <img src="assets/heart.png" alt="a heart">
+               <div id="hpinfo"></div>
+               <img src="assets/sword.png" alt="a sword">
+               <div id="attackinfo"></div>
            </div>
         </div>
 
