updated things to work with new coords

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
     <div id="about">
         <h2>About</h2>
+        <p style="color: red;">probably very broken rn, reworking coord system</p>
         <div>
             Dungeon Game was started to help me (horse) learn javascript. It's probably not going to be the most interesting game in the world when finished, but its been fun to make so thats all that really matters
             <p>
